[gd_scene load_steps=2 format=3 uid="uid://buvibmbg15qul"]

[ext_resource type="Script" uid="uid://dfjq3h830ps6l" path="res://src/ui/watch_menu_ui.gd" id="1_script"]

[node name="WatchMenuUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.15, 0.15, 0.18, 0.95)

[node name="BackPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2

[node name="TabContainer" type="TabContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 15.0
offset_top = 15.0
offset_right = -15.0
offset_bottom = -15.0
grow_horizontal = 2
grow_vertical = 2
current_tab = 0

[node name="PanelsScroll" type="ScrollContainer" parent="TabContainer"]
layout_mode = 2
follow_focus = true
vertical_scroll_mode = 2
horizontal_scroll_mode = 0
metadata/_tab_index = 0

[node name="PanelsVBox" type="VBoxContainer" parent="TabContainer/PanelsScroll"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="TestLabel1" type="Label" parent="TabContainer/PanelsScroll/PanelsVBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "UI IS WORKING!"
horizontal_alignment = 1

[node name="GeneralScroll" type="ScrollContainer" parent="TabContainer"]
visible = false
layout_mode = 2
follow_focus = true
vertical_scroll_mode = 2
horizontal_scroll_mode = 0
metadata/_tab_index = 1

[node name="GeneralVBox" type="VBoxContainer" parent="TabContainer/GeneralScroll"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="TestLabel2" type="Label" parent="TabContainer/GeneralScroll/GeneralVBox"]
layout_mode = 2
text = "General Tab"
horizontal_alignment = 1

[node name="HistoryScroll" type="ScrollContainer" parent="TabContainer"]
visible = false
layout_mode = 2
follow_focus = true
vertical_scroll_mode = 2
horizontal_scroll_mode = 0
metadata/_tab_index = 2

[node name="HistoryVBox" type="VBoxContainer" parent="TabContainer/HistoryScroll"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="TestLabel3" type="Label" parent="TabContainer/HistoryScroll/HistoryVBox"]
layout_mode = 2
text = "History Tab"
horizontal_alignment = 1

[node name="ShapesScroll" type="ScrollContainer" parent="TabContainer"]
visible = false
layout_mode = 2
follow_focus = true
vertical_scroll_mode = 2
horizontal_scroll_mode = 0
metadata/_tab_index = 3

[node name="ShapesVBox" type="VBoxContainer" parent="TabContainer/ShapesScroll"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="TestLabel4" type="Label" parent="TabContainer/ShapesScroll/ShapesVBox"]
layout_mode = 2
text = "Shapes Tab"
horizontal_alignment = 1
